# FundSelection

./: .gitignore  IMPLEMENTATION_SUMMARY.md  PRD.md  PROJECT-DELIVERY.md  README.md  REFACTOR-COMPLETE.md  REFACTOR-PLAN.md  STITCH_PROMPT.md
_1/: code.html
_2/: code.html
_3/: code.html
_4/: code.html
_5/: code.html
backend/: .env  fund_selection.db  fund_selection.db-shm  fund_selection.db-wal  pyproject.toml  start_dev.bat
backend/app/: __init__.py  config.py  data.py  database_adapter.py  db.py  main.py  market_data.py  models.py  policy_validation.py  scoring.py  store.py  universe.py
backend/app/benchmark/: __init__.py  fetcher.py  manager.py  models.py  repository.py  seed_data.py
backend/app/data/: __init__.py  nav_history.py
backend/app/factors/: README.md  __init__.py  calculator.py  errors.py  standardizer.py
backend/app/policy/: __init__.py  models.py  repository.py  scoring.py  sector_classifier.py  seed_data.py
backend/database/: schema_mysql.sql  schema_sqlite.sql
backend/database/migrations/: migration_001_initial_schema.sql  migration_002_add_nav_history.sql  migration_003_add_market_quotes_history.sql  migration_004_add_policy_events.sql  migration_005_add_data_change_log.sql  migration_006_add_performance_indexes.sql  migration_runner.py
backend/fund_quant_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_benchmark_system.py  test_factor_calculator.py  test_factor_standardizer.py  test_integration.py  test_nav_history.py  test_policy_system.py  test_policy_validation.py  test_scoring.py  test_store.py
(+41 files in other folders)
